--- a/game-client/index.html
+++ b/game-client/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-	<div id="app"></div>
-	<script type="module" src="src/main.ts"></script>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+	<div id="root"></div>
+  <div id="phaser-container"></div>
+	<script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
